# FastFreeEngine

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg.json
.claude/: CLAUDE.md
cmake/: CompilerFlags.cmake  CopyExampleAssets.cmake  TierDefinitions.cmake  embed_spirv.cmake
docs/: ROADMAP.md  agent-quickref.md  architecture-map.md  current-sprint.md  dependency-policy.md  devlog-archive.md  devlog.md  environment.md  examples-map.md  game-dev-tester-session8-report.md  (+17 more)
editor/: .context.md  CMakeLists.txt  editor_app.cpp  editor_app.h  main.cpp  play_mode.cpp  play_mode.h
editor/commands/: command.h  command_history.cpp  command_history.h  component_commands.h  entity_commands.cpp  entity_commands.h  reparent_command.h
editor/gizmos/: gizmo_renderer.cpp  gizmo_renderer.h  gizmo_system.cpp  gizmo_system.h
editor/input/: shortcut_manager.cpp  shortcut_manager.h
editor/panels/: asset_browser.cpp  asset_browser.h  build_panel.cpp  build_panel.h  file_dialog.cpp  file_dialog.h  inspector_panel.cpp  inspector_panel.h  scene_hierarchy_panel.cpp  scene_hierarchy_panel.h  viewport_panel.cpp  viewport_panel.h
editor/rendering/: editor_framebuffer.cpp  editor_framebuffer.h
engine/: CMakeLists.txt
engine/audio/: .context.md  CMakeLists.txt  audio.cpp  audio.h
engine/core/: .context.md  CMakeLists.txt  application.cpp  application.h  arena_allocator.cpp  arena_allocator.h  ecs.h  input.cpp  input.h  logging.cpp  logging.h  platform.h  prefab_system.cpp  prefab_system.h  system.h  types.h  visual_scripting.cpp  visual_scripting.h
engine/editor/: .context.md  CMakeLists.txt  editor.cpp  editor.h  graph_editor_panel.cpp  graph_editor_panel.h  llm_panel.cpp  llm_panel.h
engine/networking/: .context.md  CMakeLists.txt  client.cpp  client.h  connection.h  lag_compensation.cpp  lag_compensation.h  lobby.cpp  lobby.h  network_system.cpp  network_system.h  packet.cpp  packet.h  prediction.cpp  prediction.h  replication.cpp  replication.h  server.cpp  server.h  transport.cpp  transport.h
engine/physics/: .context.md  CMakeLists.txt  collider2d.h  collision_system.cpp  collision_system.h  narrow_phase.h  physics3d.cpp  physics3d.h  physics3d_system.cpp  physics3d_system.h
engine/renderer/: .context.md  CMakeLists.txt  animation_system.cpp  animation_system.h  camera.cpp  camera.h  font.cpp  frustum.cpp  frustum.h  gpu_instancing.h  mesh_loader.cpp  mesh_loader.h  mesh_renderer.cpp  mesh_renderer.h  pbr_material.h  post_process.cpp  post_process.h  render_queue.cpp  render_queue.h  render_system.cpp  render_system.h  rhi.h  rhi_types.h  screenshot.cpp  screenshot.h  shader_library.cpp  shader_library.h  shadow_map.cpp  shadow_map.h  skeleton.h  sprite_batch.cpp  sprite_batch.h  ssao.cpp  ssao.h  terrain.cpp  terrain.h  terrain_internal.h  terrain_renderer.cpp  terrain_renderer.h  text_renderer.cpp  (+9 more)
engine/renderer/opengl/: gl_debug.cpp  gl_debug.h  rhi_opengl.cpp  rhi_opengl.h
engine/renderer/vulkan/: rhi_vulkan.cpp  vk_buffer.cpp  vk_buffer.h  vk_descriptor.cpp  vk_descriptor.h  vk_init.cpp  vk_init.h  vk_pipeline.cpp  vk_pipeline.h  vk_resource_manager.cpp  vk_resource_manager.h  vk_shader.cpp  vk_shader.h  vk_texture.cpp  vk_texture.h  vk_uniform.cpp  vk_uniform.h
engine/renderer/vulkan/shaders/: blinn_phong.frag  blinn_phong.vert  blinn_phong_frag.h  blinn_phong_vert.h  textured.frag  textured.vert  textured_frag.h  textured_vert.h  triangle_frag.h  triangle_vert.h
engine/scene/: .context.md  CMakeLists.txt  scene_graph.cpp  scene_graph.h  scene_serialiser.cpp  scene_serialiser.h
engine/scripting/: .context.md  CMakeLists.txt  script_engine.cpp  script_engine.h
examples/showcase/: ASSETS.md  CMakeLists.txt  game.lua  main.cpp
examples/showcase/levels/: level1.lua  level2.lua  level3.lua  test_level.lua
examples/showcase/lib/: ai.lua  camera.lua  combat.lua  hud.lua  menus.lua  player.lua
examples/showcase/tools/: generate_heightmaps.py
tests/: CMakeLists.txt
tests/audio/: test_audio.cpp  test_audio_3d.cpp
tests/core/: test_application.cpp  test_arena_allocator.cpp  test_ecs.cpp  test_gamepad.cpp  test_input.cpp  test_logging.cpp  test_particles.cpp  test_prefab_system.cpp  test_renderer_headless.cpp  test_types.cpp  test_visual_scripting.cpp
tests/core/fixtures/: cyclic_graph.json  large_graph.json  malformed_prefab.json  pbr_prefab.json  tree_prefab.json  unknown_component_prefab.json  unknown_node_graph.json  valid_graph.json
tests/editor/: test_command_history.cpp  test_component_add_remove.cpp  test_component_commands.cpp  test_entity_commands.cpp  test_exporter.cpp  test_hierarchy_panel.cpp  test_llm_panel.cpp  test_play_mode.cpp  test_shortcuts.cpp
tests/networking/: test_lag_compensation.cpp  test_lobby.cpp  test_network_fuzz.cpp  test_packet.cpp  test_prediction.cpp  test_replication.cpp  test_server_client.cpp  test_transport.cpp
tests/physics/: test_narrow_phase.cpp  test_physics3d.cpp  test_physics3d_collisions.cpp  test_physics3d_raycast.cpp
tests/renderer/: test_anti_aliasing.cpp  test_fog.cpp  test_frustum.cpp  test_gpu_instancing.cpp  test_mesh_loader.cpp  test_pbr_material.cpp  test_point_lights_materials.cpp  test_post_process.cpp  test_rhi_vulkan.cpp  test_screenshot.cpp  test_shadow_map.cpp  test_skeleton.cpp  test_skybox.cpp  test_ssao.cpp  test_terrain.cpp  test_terrain_streaming.cpp  test_texture_atlas.cpp  test_texture_loader.cpp  test_ttf_font.cpp  test_vegetation.cpp  test_water.cpp
tests/scene/: test_scene_graph.cpp  test_scene_serialiser.cpp
tests/scripting/: test_animation3d_bindings.cpp  test_audio3d_bindings.cpp  test_camera3d_bindings.cpp  test_lua_sandbox.cpp  test_mouse_bindings.cpp  test_networking_bindings.cpp  test_pbr_bindings.cpp  test_physics3d_bindings.cpp  test_physics3d_collision_bindings.cpp  test_point_light_material_bindings.cpp  test_postprocess_bindings.cpp  test_sandbox_security.cpp  test_save_load.cpp  test_scene_load_binding.cpp  test_skybox_bindings.cpp  test_ssao_bindings.cpp  test_terrain_bindings.cpp  test_water_bindings.cpp
(+166 files in other folders)
